--- a/ripx/index.html
+++ b/ripx/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 "/>
     <title>Title</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet"/>
     <link href="js/js.js" rel="script">
