--- a/ripx/index.html
+++ b/ripx/index.html
@@ -67,6 +67,7 @@
         </div>
 
 <div id="section01">
+    <h1>HE'S LIFE</h1>
         <div class="middle_content">
             <div class="img_content">
                 <div class="content_array">
@@ -155,7 +156,113 @@
 
 
 </div>
-</div>
+    <div id="section02">
+        <h1>LIFE AS A SINGER</h1>
+        <div class="second_content">
+
+            <div class="content_array">
+                <div class="img_array_7">
+           <!--         <p class="side_p"> 17</p>-->
+                    <img src="https://i.pinimg.com/236x/d2/a7/0b/d2a70b07ac7c4e8130de7d1f5dd70391.jpg" />
+<!--                    <div class="p_array"><p>17</p></div>-->
+                    <h3 class="h3_array">
+                        <div class="h3_p">
+                        01 The Explanation <br>
+                        02 Jocelyn Flores<br>
+                        03 Depression & Obsession   <br>
+                        04 Everybody Dies in Their Nightmares<br>
+                        05 Revenge<br>
+                        06 Save Me<br>
+                        07 Dead Inside (Interlude)<br>
+                        08 Fuck Love (feat. Trippie Redd)<br>
+                        09 Carry On<br>
+                        10 Orlando<br>
+                        11 Ayala (Outro)<br>
+                        </div>
+                        <div class="h3_content">
+                            He will release his first full-length album on Aug. 25, 2017. The songs include 11 songs.
+                                <br> <br>
+                            Among the songs, "Joceline Flores" is the name of a woman whom Tentasion met on social media,
+                            the last person she saw before she committed suicide. So Tentasion always turned pessimistic when he
+                            thought about her and said he felt so much emotion that he kept getting tied up with her.
+                            Even after releasing the song, he communicated with fans through Instagram live to find answers to the song.
+                        </div>
+                    </h3>
+                </div>
+
+            </div>
+
+            <div class="content_array">
+
+            <div class="img_array_8">
+    <!--            <p class="side_p"> SAD! SAD! SAD!</p>
+    -->            <img src="https://images-na.ssl-images-amazon.com/images/I/71i41ZWVIYL._SL1200_.jpg"/>
+
+<!--                <div class="p_array"><p>XXXTENTACION</p></div>-->
+                <h3 class="h3_array">
+                    <div class="h3_p">
+                    01 Introduction (Instructions)<br>
+                    02 ALONE, PART 3<br>
+                    03 Moonlight<br>
+                    04 SAD!<br>
+                    05 the remedy for a broken heart (why am I so in love)<br>
+                    06 Floor 555<br>
+                    07 NUMB<br>
+                    08 infinity (888) (Feat. Joey Bada$$)<br>
+                        09 going down!<br>
+
+                    </div>
+                        <div class="h3_p2">
+                            10 Pain = BESTFRIEND (Feat. Travis Barker)<br>
+                    11 $$$ (Feat. Matt Ox[12])<br>
+                    12 love yourself (Interlude)<br>
+                    13 SMASH! (Feat. PnB Rock)<br>
+                    14 I don't even speak spanish lol (Feat. Rio Santana, Carlos Andrez, Judah)<br>
+                    15 changes<br>
+                    16 Hope<br>
+                    17 schizophrenia<br>
+                    18 before I close my eyes<br>
+                        </div>
+
+                    <div class="h3_content">
+                        <br><br><br>
+                        On March 1, the official singles 'SAD!' and 'changes' were released, and on March 16, his second album ? was released.
+            <br>
+                        She once again cemented her position as a mainstream rapper, boasting her musically high perfection and receiving great acclaim from the public and critics, but it was her last album of her life three months later as she went on the way to not be able to return due to an unexpected robbery.
+<br>
+                        The music video for his song "SAD!" was released around 10:30 p.m. on June 28 in Korea. Watching the music video, the current hairstyle and tattooed tentacion appear at the funeral of the former hair-style tentacion, where the dead body of the tentacion is resurrected in a coffin and fights the tentacion. The old X who died here on a video with his old hairstyle means that the devil inside him doesn't die easily. Many people feel that this scene is a posthumous video. To give a detailed interpretation, the former hair-style tentacion, or the death-returning tentacion, is the violent tentacion at the time of "Look At Me!" and the tentacion facing him is the tentacion that reflects on the current self.       </h3>
+            </div>
+        </div>
+        <div class="content_array">
+            <div class="img_array_9">
+<!--                <p class="side_p"> SAD! SAD! SAD!</p>-->
+                <img src="https://blackculturetv.files.wordpress.com/2018/12/5c076116381b6_xxx_skins_album_cover_texture-1541695623_5c0761165db73.jpg?w=930&h=450&crop=1"/>
+    <!--            <div class="p_array"><p>XXXTENTACION</p></div>
+    -->            <h3 class="h3_array">
+                <div class="h3_p">
+                    1 Introduction<br>
+                    2 Guardian angel<br>
+                    3 Train food<br>
+                    4 whoa (mind in awe)<br>
+                    5 BAD!<br>
+                    6 STARING AT THE SKY<br>
+                    7 One Minute (feat. Kanye West & Travis Barker)<br>
+                    8 difference (interlude)<br>
+                    9 I don’t let go<br>
+                    10 what are you so afraid of<br>
+                </div>
+                <div class="h3_content"><br>
+                    Tentacion's third full-length album and posthumous album released on December 7, 2018.
+                </div>
+            </h3>   </div>
+        </div>
+        </div>
+
+
+
+        </div>
+    </div>
+
 
                         <div class="footer"></div>
 
